fix minor spacing issue with gallery image

--- a/src/javascript/app/components/GalleryImage/gallery-image.scss
+++ b/src/javascript/app/components/GalleryImage/gallery-image.scss
@@ -8,7 +8,6 @@
   border-radius: $default-border-radius;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   box-sizing: content-box;
 
   .gallery--1x & {
@@ -87,6 +86,8 @@
     display: flex;
     flex-wrap: wrap;
     margin: 5px -3px 0 -3px;
+    flex-grow: 1;
+    align-content: flex-start;
   }
 
   &__tag {
